fix spacing

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -214,6 +214,10 @@
     margin-left: auto;
   }
 }
+.export-title {
+  .flexy(center);
+  height: @tile;
+}
 .menu-invite-form {
   .flexy(column);
   margin: @menu_padding 0;
